src/test/deca/context/invalid/created/if_while/if_int.deca
// Description :
//    test du if avec condition int 
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.29) Type de l’expression : int, attendu : ‘boolean’ pour une condition

{
int a;
if (a) {}
}
